--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,5 +1,6 @@
 @import url('https://rsms.me/inter/inter.css');
 html { font-family:
+        'SimSun'
         'Inter',
         sans-serif,
         'Apple Color Emoji',
@@ -8,6 +9,7 @@ html { font-family:
       }
 @supports (font-variation-settings: normal) {
   html { font-family:
+          'SimSun'
           'Inter var',
           sans-serif,
           'Apple Color Emoji',
