--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,7 +1,6 @@
 @import url('https://rsms.me/inter/inter.css');
 html { font-family:
         'Inter',
-        'SimSun',
         sans-serif,
         'Apple Color Emoji',
         'Segoe UI Emoji',
@@ -17,6 +16,11 @@ html { font-family:
         }
 }
 
+.cn {
+    & > *   {
+        font-family:'SimSun'
+    }
+}
 code {
   font-family:
     -apple-system,
