--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,6 +1,24 @@
 @import url('https://rsms.me/inter/inter.css');
 
-@font-face {
+
+  html { @font-face {
+      font-family:
+            'Inter var',
+            sans-serif,
+            'Apple Color Emoji',
+            'Segoe UI Emoji',
+            'Segoe UI Symbol';
+      unicode-range: U+000-5FF; /* Latin glyphs */
+    }
+
+
+    @font-face {
+      font-family: "SimSun";
+      unicode-range: U+3000–303F, U+4E00-9FFF; /* Chinese glyphs */
+    }
+      }
+@supports (font-variation-settings: normal) {
+  html { @font-face {
     font-family:
           'Inter var',
           sans-serif,
@@ -15,7 +33,8 @@
     font-family: "SimSun";
     unicode-range: U+3000–303F, U+4E00-9FFF; /* Chinese glyphs */
   }
-
+        }
+}
 
 
 code {
