--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@
 
 
 /* Light mode */
-/*@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: light) {
     blockquote {
       background: #f9f9f9;
     }
@@ -64,7 +64,7 @@
     th, td { padding: 5px; }
     tr:nth-child(even) { background: #eee }
 
-}*/
+}
 
 
 body {
