Revert "250425, css update"
This reverts commit c545aae2509fb61a58eeb0347657a63fc3e69546.

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,5 +1,6 @@
 @import url('https://rsms.me/inter/inter.css');
 html { font-family:
+        'Arial',
         'SimSun',
         sans-serif,
         'Apple Color Emoji',
@@ -8,6 +9,7 @@ html { font-family:
       }
 @supports (font-variation-settings: normal) {
   html { font-family:
+          'Arial',
           'SimSun',
           sans-serif,
           'Apple Color Emoji',
