--- a/css/fonts.css
+++ b/css/fonts.css
@@ -2,6 +2,7 @@
 @import url('https://rsms.me/inter/inter.css');
 html { font-family:
         "Cactus Classical Serif",
+        'SimSun',
         sans-serif,
         'Apple Color Emoji',
         'Segoe UI Emoji',
@@ -10,6 +11,7 @@ html { font-family:
 @supports (font-variation-settings: normal) {
   html { font-family:
           "Cactus Classical Serif",
+          'SimSun',
           sans-serif,
           'Apple Color Emoji',
           'Segoe UI Emoji',
@@ -21,6 +23,7 @@ code {
   font-family:
     -apple-system,
     BlinkMacSystemFont,
+    "Segoe UI",
     Helvetica,
     Arial,
     'SimSun',
